--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,17 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+h2{
+  color: #FEF2BF;
+}
+#highscore{
+  float: right;
+  margin-right: 3%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#highscorehead{
+  float: right;
+  margin-right: 5%;
+  margin-left: 0%;
+}
+
